made changes to css file

--- a/game.css
+++ b/game.css
@@ -58,7 +58,7 @@ body{
     
 }
 
-/* player 1 and 2 */
+/* player 1 and 2 scores, select and headings*/
 h2{
     text-align: center;
     margin-bottom: 10px;
